tests/NormalTests/paczka1/fuzzy1/60877259.err
Error in line 3: oeIbN S508 38,9
Error in line 12: fj1uHZ A543 57,9
Error in line 16: oeIbN A705 93,3
Error in line 26: m8CHq A705 78,9
Error in line 30: zApxfWkXH S508 48,2
